# Dalbaragi

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
app/anddroid/app/: build.gradle
app/anddroid/app/src/androidTest/java/com/sausagetaste/dalbaragi_android/: ExampleInstrumentedTest.java
app/anddroid/app/src/main/: AndroidManifest.xml
app/anddroid/app/src/main/cpp/: main.cpp
app/android/: settings.gradle
app/android/app/: build.gradle
app/android/app/src/main/cpp/: CMakeLists.txt  filesys_android.cpp  filesys_android.h  main.cpp
app/android/app/src/main/res/values/: strings.xml  themes.xml
app/android/app/src/main/res/values-night/: themes.xml
app/android/app/src/test/java/com/sausagetaste/dalbaragi_android/: ExampleUnitTest.java
app/android/gradle/wrapper/: gradle-wrapper.properties
app/linux/: CMakeLists.txt  main.cpp
app/windows/: CMakeLists.txt  main.cpp
asset/glsl/: alpha.frag  alpha.vert  alpha_animated.vert  composition.frag  composition.vert  d_atmos_scattering.glsl  d_atmos_scattering_copied.glsl  d_lighting.glsl  fill_screen.frag  fill_screen.vert  gbuf.vert  gbuf_animated.vert  mirror.frag  mirror.vert  on_mirror.frag  on_mirror.vert  on_mirror_animated.vert  shadow.frag  shadow.vert  shadow_animated.vert  simple.frag  simple.vert  simple_gamma.frag
asset/image/: hon_cos_001_cloth01_base.tga  hon_cos_001_other01_base.tga  hon_cos_001_underwear_base.tga
asset/model/: Character Running.dmd  DOAXVV Honoka - Warmth Scarf.dmd  DOAXVV Monica - Sugar Perfume.dmd  honoka_basic_3.dmd  missing_model.dmd  simple_box.dmd  sponza.dmd  waved_floor.dmd
asset/script/: startup.lua
asset/shader/: simple.vert  simple_v.spv
asset/spv/: alpha_animated_v.spv  alpha_f.spv  alpha_gamma_f.spv  alpha_v.spv  composition_f.spv  composition_gamma_f.spv  composition_v.spv  fill_screen_f.spv  fill_screen_v.spv  gbuf_animated_v.spv  gbuf_f.spv  gbuf_v.spv  shadow_animated_v.spv  shadow_v.spv  simple_f.spv  simple_gamma_f.spv  simple_v.spv
lib/: CMakeLists.txt
lib/engine/: CMakeLists.txt  d_config.cpp  d_config.h  d_engine.cpp  d_engine.h  d_inputs.cpp  d_inputs.h  d_resource_man.cpp  d_resource_man.h  d_script_engine.cpp  d_script_engine.h
lib/renderer/: CMakeLists.txt  d_render_cpnt.cpp  d_render_cpnt.h  d_renderer.cpp  d_renderer.h  d_renderer_create.cpp  d_renderer_create.h  d_scene.cpp  d_scene.h
lib/scene/: CMakeLists.txt  d_scene.cpp  d_scene.h
lib/util/: CMakeLists.txt  d_actor.cpp  d_actor.h  d_animation.cpp  d_animation.h  d_collider.h  d_defines.h  d_filesystem.cpp  d_filesystem.h  d_filesystem2.cpp  d_filesystem2.h  d_filesystem_old.cpp  d_filesystem_std.cpp  d_filesystem_std.h  d_geometry.cpp  d_geometry.h  d_image_parser.cpp  d_input_consumer.cpp  d_input_def.h  d_json_util.cpp  d_json_util.h  d_konsts.h  d_log_channel.h  d_logger.cpp  d_logger.h  d_mesh_builder.cpp  d_mesh_builder.h  d_model_data.cpp  d_model_data.h  d_model_parser.cpp  d_model_parser.h  d_static_list.cpp  d_static_list.h  d_task_thread.cpp  d_task_thread.h  d_timer.cpp  d_timer.h
lib/vulkan/: CMakeLists.txt  d_buffer_memory.cpp  d_buffer_memory.h  d_command.cpp  d_command.h  d_framebuffer.cpp  d_framebuffer.h  d_image_obj.cpp  d_image_obj.h  d_model_renderer.cpp  d_model_renderer.h  d_render_pass.cpp  d_render_pass.h  d_shader.cpp  d_shader.h  d_swapchain.cpp  d_swapchain.h  d_sync_primitives.cpp  d_uniform.cpp  d_uniform.h  d_vert_data.cpp  d_vert_data.h  d_vk_device.cpp  d_vk_device.h  d_vk_managers.cpp  d_vk_managers.h  d_vk_resource.cpp  d_vk_resource.h  d_vulkan_man.cpp  d_vulkan_man.h
lib/window/: CMakeLists.txt  d_glfw.cpp  d_glfw.h
misc/: euler_rotations.md
script/: compile_shaders.py  count_lines.py
source/app/: CMakeLists.txt
source/app/android/app/: build.gradle
source/app/android/app/src/main/: AndroidManifest.xml
source/app/android/app/src/main/cpp/: CMakeLists.txt  filesys_android.cpp  filesys_android.h  main.cpp
source/app/android/gradle/wrapper/: gradle-wrapper.properties
source/app/lib/glfw/: CMakeLists.txt
source/app/lib/glfw/include/dal/: glfw.hpp
source/app/lib/glfw/src/: glfw.cpp
source/app/linux/: main.cpp
source/app/windows/: CMakeLists.txt  main.cpp
source/lib/: CMakeLists.txt
source/lib/engine/: CMakeLists.txt
source/lib/engine/engine/: CMakeLists.txt  d_config.h  d_engine.cpp  d_engine.h  d_inputs.cpp  d_inputs.h  d_resource_man.cpp  d_resource_man.h  d_script_engine.cpp
source/lib/engine/renderer/: CMakeLists.txt  d_render_config.h  d_render_cpnt.cpp  d_render_cpnt.h  d_renderer.h  d_renderer_create.h  d_scene.cpp  d_scene.h
source/lib/engine/vulkan/: CMakeLists.txt  d_buffer_memory.cpp  d_buffer_memory.h  d_command.cpp  d_command.h  d_framebuffer.cpp  d_framebuffer.h  d_image_obj.cpp  d_image_obj.h  d_model_renderer.cpp  d_model_renderer.h  d_render_pass.cpp  d_shader.cpp  d_shader.h  d_swapchain.cpp  d_swapchain.h  d_sync_primitives.cpp  d_sync_primitives.h  d_uniform.cpp  d_uniform.h  d_vert_data.cpp  d_vert_data.h  d_vk_device.cpp  d_vk_device.h  d_vk_managers.cpp  d_vk_managers.h  d_vulkan_header.h  d_vulkan_man.cpp  d_vulkan_man.h
source/lib/engine/window/: CMakeLists.txt  d_glfw.cpp
source/lib/util/: CMakeLists.txt  d_animation.cpp  d_collider.cpp  d_filesystem_std.h  d_indices.cpp  d_indices.h  d_input_consumer.h  d_input_def.cpp  d_json_util.cpp  d_log_channel.cpp  d_logger.h  d_model_data.h  d_task_thread.h
source/lib/util/include/dal/util/: animation.h  collider.h  defines.h  filesystem_std.h  image_parser.h  indices.h  input_consumer.h  logger.h  mesh_builder.h  model_data.h  static_list.h
source/lib/util/src/: actor.cpp  animation.cpp  collider.cpp  filesystem.cpp  filesystem_std.cpp  geometry.cpp  image_parser.cpp  indices.cpp  input_consumer.cpp  input_def.cpp  json_util.cpp  log_channel.cpp  logger.cpp  mesh_builder.cpp  model_data.cpp  static_list.cpp  task_thread.cpp
